ajout de la gestion des échéances dans le clonage des opérations périodiques